--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta name="description" content="Live global wind visualization demo for research labs." />
   <link rel="stylesheet" href="./css/styles.css" />
   <!-- Three.js & helpers (CDN) -->
-  <script src="https://unpkg.com/three@0.160.0/build/three.min.js"></script>
-  <script src="https://unpkg.com/three@0.160.0/examples/js/controls/OrbitControls.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/three@0.149.0/build/three.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/three@0.149.0/examples/js/controls/OrbitControls.js"></script>
   <script defer src="./js/app.js"></script>
 </head>
 <body>
