--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
   <meta name="description" content="Live global wind visualization demo for research labs." />
   <link rel="stylesheet" href="./css/styles.css" />
   <!-- Three.js & helpers (CDN) -->
+<!-- Three.js classic globals (works without modules/bundlers) -->
 <script src="https://cdn.jsdelivr.net/npm/three@0.149.0/build/three.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/three@0.149.0/examples/js/controls/OrbitControls.js"></script>
-  <script defer src="./js/app.js"></script>
+
+<!-- Your app -->
+<script defer src="./js/app.js"></script>
+
 </head>
 <body>
   <div id="bg"></div>
